RESOLVED FIXED277476
[GTK] `hyphens: auto` text is not hyphenated when `lang` attribute is not set
https://bugs.webkit.org/show_bug.cgi?id=277476
Summary [GTK] `hyphens: auto` text is not hyphenated when `lang` attribute is not set
Vitaly Dyackhov
Reported 2024-08-01 00:46:19 PDT
While the spec https://drafts.csswg.org/css-text/#hyphens-property requires the `lang` attribute to be set for hyphenation to work, Apple ports fall back to the default language when it's not. We should do the same for compatibility.
Attachments
Vitaly Dyackhov
Comment 1 2024-08-01 00:56:48 PDT
EWS
Comment 2 2024-08-01 06:46:19 PDT
Committed 281705@main (57d1e9e10bb4): <https://commits.webkit.org/281705@main> Reviewed commits have been landed. Closing PR #31587 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.