[GTK] `hyphens: auto` text is not hyphenated when `lang` attribute is not set https://bugs.webkit.org/show_bug.cgi?id=277476

Reviewed by Carlos Garcia Campos.

While the spec https://drafts.csswg.org/css-text/#hyphens-property
requires the `lang` attribute to be set for hyphenation to work,
Apple ports fall back to the default language when it's not.
We should do the same for compatibility.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/fast/text/hyphenate-locale-expected.png:
* LayoutTests/platform/gtk/fast/text/hyphenate-locale-expected.txt:
* LayoutTests/platform/gtk/fast/text/simple-line-hyphens-with-text-align-expected.html: Added.
* LayoutTests/platform/gtk/fast/text/simple-line-hyphens-with-word-letter-spacing-expected.html: Added.
* LayoutTests/platform/gtk/fast/text/simple-line-layout-hyphen-limit-after-expected.html: Added.
* LayoutTests/platform/gtk/fast/text/simple-line-layout-hyphen-limit-before-expected.html: Added.
* LayoutTests/platform/gtk/fast/text/simple-line-layout-hyphen-limit-lines-expected.html: Added.
* LayoutTests/platform/wpe/fast/text/simple-line-hyphens-with-text-align-expected.html: Renamed from LayoutTests/platform/glib/fast/text/simple-line-hyphens-with-text-align-expected.html.
* LayoutTests/platform/wpe/fast/text/simple-line-hyphens-with-word-letter-spacing-expected.html: Renamed from LayoutTests/platform/glib/fast/text/simple-line-hyphens-with-word-letter-spacing-expected.html.
* LayoutTests/platform/wpe/fast/text/simple-line-layout-hyphen-limit-after-expected.html: Renamed from LayoutTests/platform/glib/fast/text/simple-line-layout-hyphen-limit-after-expected.html.
* LayoutTests/platform/wpe/fast/text/simple-line-layout-hyphen-limit-before-expected.html: Renamed from LayoutTests/platform/glib/fast/text/simple-line-layout-hyphen-limit-before-expected.html.
* LayoutTests/platform/wpe/fast/text/simple-line-layout-hyphen-limit-lines-expected.html: Renamed from LayoutTests/platform/glib/fast/text/simple-line-layout-hyphen-limit-lines-expected.html.
* Source/WebCore/platform/text/hyphen/HyphenationLibHyphen.cpp:
(WebCore::canHyphenate):
(WebCore::lastHyphenLocation):

Canonical link: https://commits.webkit.org/281705@main